<?xml version="1.0"?>
<package format="2">
  <name>dynamics_estimator_ros</name>
  <version>0.1.1</version>
  <description>Ros1 Integration for estimator for the Dynamics of a chain robot e.g. a manipulator</description>
  <maintainer email="mitch@robots.ox.ac.uk">Alexander Mitchell</maintainer>
  <license>Proprietary</license>
  <author email="mitch@robots.ox.ac.uk"> Alexander Mitchell</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen</depend>
  <depend>pinocchio</depend>
  <depend>dynamics_estimator</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>